--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>Swift Bengaluru</title>
   </head>
   <body>
     <main>
-        <h1>Welcome to My Website</h1>  
+        <h1>Welcome to Swift Bengaluru</h1>  
         <p>This is my new website which is hosted on GitHub Pages!</p>
     </main>
   </body>
